# pytroll-schedule

./: .bandit  .bumpversion.cfg  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .stickler.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  changelog.rst  generate_schedule_xmlpage.py  pyproject.toml  reqreader.xsl  scheduler.cfg  scheduler.cfg_template  scheduler.yaml_template  setup.cfg  setup.py  versioneer.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml
continuous_integration/: environment.yaml
docs/: Makefile  about.rst  conf.py  config.rst  environment.yaml  example.rst  index.rst  install.rst  make.bat  miscellaneous.rst  usage.rst
pytroll-schedule/: __init__.py  graph.py  schedule.py  version.py
pytroll-schedule/tests/: __init__.py  test_schedule.py  test_spherical.py
trollsched/: __init__.py  boundary.py  combine.py  compare.py  drawing.py  graph.py  helper_functions.py  logger.py  pass_scheduling_utils.py  satpass.py  schedule.py  shapefiles_from_schedule.py  spherical.py  utils.py  version.py  writers.py
trollsched/tests/: __init__.py  conftest.py  test_pass_outlines.py  test_satpass.py  test_schedule.py  test_spherical.py
