[project]
name = "pytroll-schedule"
dynamic = ["version"]
description = "Scheduling satellite passes in Python"
authors = [
    { name = "Martin Raspaud", email = "martin.raspaud@smhi.se" }
]
dependencies = ["numpy",
                "pyresample >= 1.22",
                "pyorbital",
                "pyyaml",
                "defusedxml"]
readme = "README.md"
requires-python = ">= 3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[project.scripts]
schedule = "trollsched.schedule:run"
create_shapefiles_from_schedule = "trollsched.shapefiles_from_schedule:run"
compare_scheds = "trollsched.compare:run"


[project.urls]
"Documentation" = "https://pytroll-schedule.readthedocs.io/en/latest/"

[project.optional-dependencies]
minio = ["minio", "s3fs"]
local = ["watchdog"]
publishing = ["posttroll"]
ssh = ["paramiko"]
dataspace = ["oauthlib", "requests_oauthlib", "s3fs"]
datastore = ["oauthlib", "requests_oauthlib"]
dhus = ["defusedxml"]
selector = ["redis"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["trollsched"]


[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "trollsched/version.py"


# [tool.ruff]
# select = ["E", "W", "F", "I", "D", "S", "B", "A", "PT", "Q", "TID"]
# ignore = ["B905"]  # only available from python 3.10
# line-length = 120

# [tool.ruff.lint]
# # See https://docs.astral.sh/ruff/rules/
# select = ["A", "B", "D", "E", "W", "F", "I", "N", "PT", "S", "TID", "C90", "Q", "T10", "T20"]
# ignore = []

# [tool.ruff.per-file-ignores]
# "trollsched/tests/*" = ["S101"]  # assert allowed in tests
# "trollsched/version.py" = ["D100", "Q000"]  # automatically generated by hatch-vcs

# [tool.ruff.pydocstyle]
# convention = "google"

# [tool.ruff.lint.mccabe]
# max-complexity = 10
