[project]
name = "pytroll-schedule"
dynamic = ["version"]
description = "Scheduling satellite passes in Python"
authors = [
    { name = "The Pytroll Team", email = "pytroll@googlegroups.com" }
]
dependencies = ["numpy",
                "pyresample >= 1.22",
                "pyorbital",
                "shapely",
                "geopandas",
                "pandas",
                "pyyaml",
                "defusedxml"]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[project.scripts]
schedule = "trollsched.schedule:run"
create_shapefiles_from_schedule = "trollsched.shapefiles_from_schedule:run"
compare_scheds = "trollsched.compare:run"


[project.urls]
"Documentation" = "https://pytroll-schedule.readthedocs.io/en/latest/"

[project.optional-dependencies]
doc = ["sphinx", "sphinx_rtd_theme", "sphinxcontrib-apidoc"]
test = [
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["trollsched"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "trollsched/version.py"

[tool.isort]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
profile = "black"
skip_gitignore = true
default_section = "THIRDPARTY"
known_first_party = "pytroll-schedule"
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
# In the future, add "B", "S", "N"
select = ["A", "D", "E", "W", "F", "I", "PT", "TID", "C90", "Q", "T10", "T20", "NPY"]

[tool.ruff.lint.per-file-ignores]
"trollsched/tests/*" = ["S101"]  # assert allowed in tests
"trollsched/version.py" = ["D100", "Q000"]  # automatically generated by hatch-vcs

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.coverage.run]
relative_files = true
omit = ["trollsched/version.py"]
